--- a/executor/package.json
+++ b/executor/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "config": "^3.2.1",
+    "dotenv": "^8.0.0",
+    "mongoose": "^5.6.2",
     "web3": "^1.0.0-beta.55"
   }
 }
